force-app/main/default/objects/SEL_BatchStepTemplate__mdt/SEL_BatchStepTemplate__mdt.object-meta.xml
<CustomObject>
    <label>Batch Step Template</label>
    <pluralLabel>Batch Step Templates</pluralLabel>
</CustomObject>