force-app/main/default/objects/SEL_BatchStepTemplate__mdt/fields/SEL_BatchSize__c.field-meta.xml
<CustomField>
    <fullName>SEL_BatchSize__c</fullName>
    <label>Batch Size</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>