force-app/main/default/objects/SEL_BatchStepTemplate__mdt/fields/SEL_BatchTemplateId__c.field-meta.xml
<CustomField>
    <fullName>SEL_BatchTemplateId__c</fullName>
    <label>Batch Template</label>
    <referenceTo>SEL_BatchTemplate__mdt</referenceTo>
    <relationshipLabel>Batch Step Templates</relationshipLabel>
    <relationshipName>SEL_BatchStepTemplates</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>