force-app/main/default/objects/SEL_BatchStepTemplate__mdt/fields/SEL_Sequence__c.field-meta.xml
<CustomField>
    <fullName>SEL_Sequence__c</fullName>
    <label>Sequence</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>