force-app/main/default/objects/SEL_BatchStepTemplate__mdt/listViews/AllFields.listView-meta.xml
<ListView>
    <fullName>AllFields</fullName>
    <columns>MasterLabel</columns>
    <columns>SEL_BatchTemplateId__c</columns>
    <columns>DeveloperName</columns>
    <columns>SEL_BatchSize__c</columns>
    <columns>SEL_Class__c</columns>
    <columns>SEL_IsActive__c</columns>
    <columns>SEL_Sequence__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Fields</label>
</ListView>